--- a/public/index.htm
+++ b/public/index.htm
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <title></title>
     <link rel="stylesheet" href="./reset.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="app"></div>
