--- a/public/index.htm
+++ b/public/index.htm
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title></title>
-    <link rel="stylesheet" href="./reset.css" />
+    <link rel="stylesheet" href="/reset.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
@@ -11,6 +11,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="./dist/main.js" charset="utf-8"></script>
+    <script src="/dist/main.js" charset="utf-8"></script>
   </body>
 </html>
